feat: pacifist/militarist tenets and authorty tenets and cost logic

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -71,21 +71,21 @@
 	auth_oligarchic:0 "Oligarchic"
 	auth_oligarchic_desc:0 "Oligarchic governments are ruled by a small group of individuals that hold all political power."
 
+	auth_tec_ecclesiocracy:0 "Ecclesiocracy"
+	auth_tec_ecclesiocracy_desc:0 "Ecclesiocratic governments are ruled by a council of high-ranking religious leaders who collectively interpret and enact the will of their faith."
+
 	TEC_AUTH_OLIGARCHIC_TYPES: "['concept_tec_authority_type_oligarchic_type']"
 	TEC_AUTHORITY_ELECTION_OLIGARCHIC:0 "§HElection Type:§!\n- Holds an election every §Y20§! years to select a new Ruler.\n- Can §YDO§! emergency elections."
-
-	auth_tec_theocracy:0 "Theocracy"
-	auth_tec_theocracy_desc:0 "Belief and administration united, this kind of government commands in the name of the divinity; the maximum authority is recognized as the direct manifestation of a deity."
-
-	auth_cyber_creed_tec_theocracy: "Augmented Ecclesiocracy"
-	auth_cyber_creed_tec_theocracy_desc: "A theocratic regime where religious leaders, enhanced with sacred cybernetics, guide the faithful through divine governance and spiritual enlightenment."
-	concept_auth_cyber_creed_tec_theocracy: "$auth_cyber_creed_tec_theocracy$"
 
 	TEC_AUTH_THEOCRACY_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_dictatorial_type']"
 	TEC_AUTHORITY_ELECTION_THEOCRACY:0 "§HElection Type:§!\n- Holds an election upon ruler death to select a new Ruler.\n- Can §YDO§! emergency elections."
 
 	auth_dictatorial:0 "Dictatorial"
 	auth_dictatorial_desc:0 "Dictatorial governments are ruled by a single individual for life that wields absolute control over the state."
+
+	auth_tec_theocracy:0 "Theocracy"
+	auth_tec_theocracy_desc:0 "Theocratic governments are ruled by a supreme religious leader who wields absolute authority as the divine representative of the state faith, believed to have a personal connection with the devine."
+
 
 	TEC_AUTH_DICTATORIAL_TYPES: "['concept_tec_authority_type_autocratic'], ['concept_tec_authority_type_dictatorial_type']"
 	TEC_AUTHORITY_ELECTION_DICTATORIAL:0 "§HElection Type:§!\n- Holds an election upon ruler death to select a new Ruler.\n- Can §RNOT DO§! emergency elections."
