--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -625,3 +625,59 @@ tec_debug.1.rerun_leader_actions: "Rerun Leader Starting on Actions"
 tec_debug.1.reset_leader: "Reset Leader To Level 1"
 
 
+auth_democratic_key: "auth_democratic"
+auth_direct_democratic_key: "auth_direct_democratic"
+auth_cyber_creed_democratic_key: "auth_cyber_creed_democratic"
+auth_cyber_democratic_individualist_key: "auth_cyber_democratic_individualist"
+auth_cyber_democratic_collectivist_key: "auth_cyber_democratic_collectivist"
+auth_synth_democratic_physical_key: "auth_synth_democratic_physical"
+auth_synth_democratic_virtual_key: "auth_synth_democratic_virtual"
+	
+auth_oligarchic_key: "auth_oligarchic"
+auth_cyber_creed_oligarchic_key: "auth_cyber_creed_oligarchic"
+auth_cyber_oligarchic_individualist_key: "auth_cyber_oligarchic_individualist"
+auth_cyber_oligarchic_collectivist_key: "auth_cyber_oligarchic_collectivist"
+auth_synth_oligarchic_physical_key: "auth_synth_oligarchic_physical"
+auth_synth_oligarchic_virtual_key: "auth_synth_oligarchic_virtual"
+	
+auth_dictatorial_key: "auth_dictatorial"
+auth_cyber_creed_dictatorial_key: "auth_cyber_creed_dictatorial"
+auth_cyber_dictatorial_individualist_key: "auth_cyber_dictatorial_individualist"
+auth_cyber_dictatorial_collectivist_key: "auth_cyber_dictatorial_collectivist"
+auth_synth_dictatorial_physical_key: "auth_synth_dictatorial_physical"
+auth_synth_dictatorial_virtual_key: "auth_synth_dictatorial_virtual"
+
+auth_imperial_key: "auth_imperial"
+auth_cyber_creed_imperial_key: "auth_cyber_creed_imperial"
+auth_cyber_imperial_individualist_key: "auth_cyber_imperial_individualist"
+auth_cyber_imperial_collectivist_key: "auth_cyber_imperial_collectivist"
+auth_synth_imperial_physical_key: "auth_synth_imperial_physical"
+auth_synth_imperial_virtual_key: "auth_synth_imperial_virtual"
+
+auth_corporate_key: "auth_corporate"
+auth_cyber_creed_corporate_key: "auth_cyber_creed_corporate"
+auth_cyber_corporate_individualist_key: "auth_cyber_corporate_individualist"
+auth_cyber_corporate_collectivist_key: "auth_cyber_corporate_collectivist"
+auth_synth_corporate_physical_key: "auth_synth_corporate_physical"
+auth_synth_corporate_virtual_key: "auth_synth_corporate_virtual"
+
+auth_tec_patrocorporate_key: "auth_tec_patrocorporate"
+auth_cyber_creed_tec_patrocorporate_key: "auth_cyber_creed_tec_patrocorporate"
+auth_cyber_tec_patrocorporate_individualist_key: "auth_cyber_tec_patrocorporate_individualist"
+auth_cyber_tec_patrocorporate_collectivist_key: "auth_cyber_tec_patrocorporate_collectivist"
+auth_synth_tec_patrocorporate_physical_key: "auth_synth_tec_patrocorporate_physical"
+auth_synth_tec_patrocorporate_virtual_key: "auth_synth_tec_patrocorporate_virtual"
+
+auth_tec_ai_key: "auth_tec_ai"
+auth_cyber_creed_tec_ai_key: "auth_cyber_creed_tec_ai"
+auth_cyber_tec_ai_individualist_key: "auth_cyber_tec_ai_individualist"
+auth_cyber_tec_ai_collectivist_key: "auth_cyber_tec_ai_collectivist"
+auth_synth_tec_ai_physical_key: "auth_synth_tec_ai_physical"
+auth_synth_tec_ai_virtual_key: "auth_synth_tec_ai_virtual"
+
+auth_tec_ai_corporate_key: "auth_tec_ai_corporate"
+auth_cyber_creed_tec_ai_corporate_key: "auth_cyber_creed_tec_ai_corporate"
+auth_cyber_tec_ai_corporate_individualist_key: "auth_cyber_tec_ai_corporate_individualist"
+auth_cyber_tec_ai_corporate_collectivist_key: "auth_cyber_tec_ai_corporate_collectivist"
+auth_synth_tec_ai_corporate_physical_key: "auth_synth_tec_ai_corporate_physical"
+auth_synth_tec_ai_corporate_virtual_key: "auth_synth_tec_ai_corporate_virtual"
