--- a/localisation/english/zz_evolved_cults_l_english.yml
+++ b/localisation/english/zz_evolved_cults_l_english.yml
@@ -2,8 +2,7 @@
  tec_has_empire_cult: "Has Empire Ideology Tenet:"
  tec_has_empire_last_activated_cult: "Has last activated Empire Ideology Tenet:"
  tec_has_empire_last_deactivated_cult: "Has last deactivated Empire Ideology Tenet:"
- tec_has_cult_points_available_no: "£trigger_no£ Has Available Ideology Tenet Points"
- tec_has_cult_points_available_yes: "£trigger_yes£ Has Available Ideology Tenet Points"
+ tec_has_cult_points_available: "Has Enough Points for Tenet: "
  tec_cui_has_pending_cult_decision_no: "£trigger_no£ Has Pending Cult Decision"
  tec_cui_has_pending_cult_decision_yes: "£trigger_yes£ Has Pending Cult Decision"
  tec_activate_cult_effect: "Activated Ideology Tenet:"
@@ -16,11 +15,14 @@
  tec_cui_cult_header_spiritualist_group: "Spiritualist Tenets"
  tec_cui_cult_header_special_group: "Special Tenets"
  tec_cui_cult_header_advanced_group: "Advanced Tenets"
+ tec_cui_cult_header_authority_group: "Authority Tenets"
  tec_cui_cult_title_activate_cult: "Activate Tenet?"
  tec_cui_cult_title_activate_cult_desc: "Are you sure you want to activate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
  tec_cui_cult_title_deactivate_cult: "Deactivate Tenet?"
  tec_cui_cult_title_deactivate_cult_desc: "Are you sure you want to deactivate the §Y['tradition:[from.tec_cult_in_queue]']§! Tenet?"
  tec_cui_cult_invalid: "Invalid"
+ tec_cui_has_no_authority_swap_no: "£trigger_no£ Has no Advanced Authority Swaps"
+ tec_cui_has_no_authority_swap_yes: "£trigger_yes£ Has no Advanced Authority Swaps"
 
  tec_cui_cult_faction_demand_liked_desc: "Having the §Y$CULT$§! Tenet pleases the [Root.GetName]"
  tec_cui_cult_faction_demand_disliked_desc: "Having the §Y$CULT$§! Tenet displeases the [Root.GetName]"
@@ -37,49 +39,85 @@
 
  mod_tec_cult_points_add: "Ideology Tenet Points"
 
+ tec_cui_cult_tag_basic_tenet: "§EBasic Tenet§!"
+ tec_cui_cult_tag_spiritualist_tenet: "§ESpiritualist Tenet§!"
+ tec_cui_cult_tag_advanced_tenet: "§EAdvanced Tenet§!"
+ tec_cui_cult_tag_special_tenet: "§ESpecial Tenet§!"
+ tec_cui_cult_tag_authority_tenet: "§EAuthority Tenet§!"
+ tec_cui_cult_tag_transitory_tenet: "§ETransitory Tenet§!"
+
+ tec_cui_cult_deactivate_generic: "Lose all effects of this Tenet"
+
  tec_cult_tec_tenet_state_religion: "State Religion"
- tec_cult_tec_tenet_state_religion_desc: "Our spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
+ tec_cult_tec_tenet_state_religion_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur spiritual doctrine is seamlessly intertwined with governance, ensuring all civic actions and policies are rooted in sacred beliefs. This fosters unity and divine harmony, giving every citizen a profound sense of identity and stability within the cosmic order."
  tec_cult_tec_tenet_state_religion_effect: "[GetPriestIcon] [GetPriestPlural] Political Power: §Y+0.50§!\n\nCan build £building£ ['building:building_temple'] buildings on your planets and ['district:district_tec_arcology_faith'] on ['concept_tec_ecumenopoleis'] and other §YAdvanced Planets§!\n\nEmbracing any ['ethic:ethic_spiritualist'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_materialistic_views: "Philosophical Materialism"
- tec_cult_tec_tenet_materialistic_views_desc: "We emphasize the primacy of the material world and empirical knowledge. While religion, superstition and mysticism might have a place in the hearts of our people, the focus is on scientific inquiry and tangible progress, ensuring advancements are grounded in reality and reason."
+ tec_cult_tec_tenet_materialistic_views_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nWe emphasize the primacy of the material world and empirical knowledge. While religion, superstition and mysticism might have a place in the hearts of our people, the focus is on scientific inquiry and tangible progress, ensuring advancements are grounded in reality and reason."
  tec_cult_tec_tenet_materialistic_views_effect: "[GetResearcherPluralWithIcon] Political Power: §Y+0.50§!\n\nAllows the selection of §YResearch Category§! focus via policy\n\nCan use ['concept_tec_living_standard_academic_privilege_alias_icon'] Living Standards\n\nEmbracing any ['ethic:ethic_materialist'] Faction costs no §Y$tec_loc_unity$§!"
 
 
  tec_cult_tec_tenet_entrepreneur_economy: "Entrepreneur Economy"
- tec_cult_tec_tenet_entrepreneur_economy_desc: "Our economy thrives on the spirit of entrepreneurship, encouraging innovation and individual initiative. Citizens are empowered to pursue their ambitions, driving progress and prosperity through creativity and enterprise. "
+ tec_cult_tec_tenet_entrepreneur_economy_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur economy thrives on the spirit of entrepreneurship, encouraging innovation and individual initiative. Citizens are empowered to pursue their ambitions, driving progress and prosperity through creativity and enterprise. "
  tec_cult_tec_tenet_entrepreneur_economy_effect: "$tec_private_hired$ $tec_loc_jobs$ and $job_trader_plural_with_icon$ Political Power: §Y+0.50§!\n\nCan build £building£ ['concept_tec_ethic_building_entrepreneur'] on your planets\n\nEmbracing any ['ethic:ethic_competitive'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_public_employment: "Public Employment"
- tec_cult_tec_tenet_public_employment_desc: "Our society prioritizes public employment, ensuring that every citizen has a role in supporting communal well-being, providing a social security net."
+ tec_cult_tec_tenet_public_employment_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur society prioritizes public employment, ensuring that every citizen has a role in supporting communal well-being, providing a social security net."
  tec_cult_tec_tenet_public_employment_effect: "£job_tec_state_worker£ $job_tec_state_worker_plural$ Political Power: §Y+0.50§!\n\nUnemployed $tec_loc_pops$ become ['concept_tec_worker_job_tec_state_worker_plural_icon'], which consume extra §Y$tec_loc_amenities$§! in exchange of producing extra §Y$tec_loc_unity$§! and not suffering §Y$tec_loc_happiness$§! maluses, and benefit from Unemployment Modifiers\n\nEmbracing any ['ethic:ethic_cooperative'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_reform_and_opening: "Reform and Opening"
- tec_cult_tec_tenet_reform_and_opening_desc: "Embracing external investment and innovation, blending them with our cooperative principles. We strive to revitalizes our economy, encourages technological advancement, and strengthens international ties while maintaining our core values and social structure."
+ tec_cult_tec_tenet_reform_and_opening_desc: "$tec_cui_cult_tag_basic_tenet$\nEmbracing external investment and innovation, blending them with our cooperative principles. We strive to revitalizes our economy, encourages technological advancement, and strengthens international ties while maintaining our core values and social structure."
  tec_cult_tec_tenet_reform_and_opening_effect: "$MOD_PLANET_MAX_BUILDINGS_ADD$ (On Tier 2 Capitals and above): §R-1§!\n\nIncreased §Y$tec_loc_opinion$§! with ['concept_tec_authority_type_corporate'] Empires\n\n§Y£building£ Branch Office Capital§! buildings on your planets have reduce §Y$tec_loc_influence$§! Cost"
 
  tec_cult_tec_tenet_keys_to_power: "Keys to Power"
- tec_cult_tec_tenet_keys_to_power_desc: "Our leadership wisely expands the distribution of power among key individuals, fostering loyalty and stability. By sharing authority and responsibilities, we prevent unrest and ensure a harmonious and effective governance, securing the prosperity and unity of our society."
+ tec_cult_tec_tenet_keys_to_power_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur leadership wisely expands the distribution of power among key individuals, fostering loyalty and stability. By sharing authority and responsibilities, we prevent unrest and ensure a harmonious and effective governance, securing the prosperity and unity of our society."
  tec_cult_tec_tenet_keys_to_power_effect: "£job_clerk£ $job_clerk_plural$ Political Power: §Y+0.50§!\n\nCan use ['concept_tec_edict_encourage_free_thought_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_egalitarian'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_executive_aggrandizement: "Executive Aggrandizement"
- tec_cult_tec_tenet_executive_aggrandizement_desc: "Our leadership gradually consolidates power, subtly expanding its influence and control. Through carefully orchestrated measures, authority is centralized, ensuring stability and decisive governance while maintaining the facade of traditional structures."
+ tec_cult_tec_tenet_executive_aggrandizement_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur leadership gradually consolidates power, subtly expanding its influence and control. Through carefully orchestrated measures, authority is centralized, ensuring stability and decisive governance while maintaining the facade of traditional structures."
  tec_cult_tec_tenet_executive_aggrandizement_effect: "£job_enforcer£ $job_enforcer_plural$ Political Power: §Y+0.50§!\n\nCan use ['concept_tec_living_standard_stratified_alias_icon'] Living Standards\n\nEmbracing any ['ethic:ethic_authoritarian'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_cosmic_curiosity: "Cosmic Curiosity"
- tec_cult_tec_tenet_cosmic_curiosity_desc: "The universe is vast and full of wonders. While we remain cautious, our civilization recognizes the potential benefits of engaging with alien cultures and technologies."
+ tec_cult_tec_tenet_cosmic_curiosity_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nThe universe is vast and full of wonders. While we remain cautious, our civilization recognizes the potential benefits of engaging with alien cultures and technologies."
  tec_cult_tec_tenet_cosmic_curiosity_effect: "\nCan use ['concept_tec_edict_land_of_opportunity_alias_icon'] Edict after established communications with another empires\n\nIncreased §Y$tec_loc_opinion$§! with other species\n\nEmbracing any ['ethic:ethic_xenophile'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_interspecies_grievances: "Interspecies Grievances"
- tec_cult_tec_tenet_interspecies_grievances_desc: "As tensions between species reach a boiling point, our empire enacts policies to address long-standing disputes, risking further division in the name of stability."
+ tec_cult_tec_tenet_interspecies_grievances_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nAs tensions between species reach a boiling point, our empire enacts policies to address long-standing disputes, risking further division in the name of stability."
  tec_cult_tec_tenet_interspecies_grievances_effect: "\nCan use ['concept_tec_policy_option_purge_allowed_alias_icon'] Policy Option\n\nDecreases §Y$tec_loc_opinion$§! with other species\n\nEmbracing any ['ethic:ethic_xenophobe'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_tenet_selective_xenophilia: "Selective Xenophilia"
- tec_cult_tec_tenet_selective_xenophilia_desc: "Not all aliens are created equal. We recognize the value in select xeno species, cultivating beneficial relationships while maintaining our cultural identity."
+ tec_cult_tec_tenet_selective_xenophilia_desc: "$tec_cui_cult_tag_basic_tenet$\nNot all aliens are created equal. We recognize the value in select xeno species, cultivating beneficial relationships while maintaining our cultural identity."
  tec_cult_tec_tenet_selective_xenophilia_effect: "Allow §G2§! §YXeno Species§! to acquire ['concept_tec_right_option_citizenship_full_alias_icon']\n\nNo ['ethic:ethic_xenophile'] Attraction from these §YXeno Species§!\n\nIncreased §Y$tec_loc_opinion$§! with empires whose Species you granted §YFull Citizenship§!"
+
+ tec_cult_tec_tenet_strategic_readness_initiaitive: "Military Readiness"
+ tec_cult_tec_tenet_strategic_readness_initiaitive_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nIn an increasingly dangerous galaxy, our civilization recognizes the need for enhanced military preparedness, balancing defensive capabilities with societal progress."
+ tec_cult_tec_tenet_strategic_readness_initiaitive_effect: "£job_soldier£ $job_soldier_plural$ Political Power: §Y+0.50§!\n\nCan use ['concept_tec_policy_option_no_retreat_doctrine_alias_icon'] Policy Option\n\nCan use ['concept_tec_edict_tec_doing_your_part_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_militarist'] Faction costs no §Y$tec_loc_unity$§!"
+
+ tec_cult_tec_tenet_deescalation_doctrine: "De-escalation Doctrine"
+ tec_cult_tec_tenet_deescalation_doctrine_desc: "$tec_cui_cult_tag_basic_tenet$ ($tec_cui_cult_tag_transitory_tenet$)\nOur society embraces a defensive posture, prioritizing the protection of our people through diplomatic means and measured responses. We seek to defuse conflicts before they escalate."
+ tec_cult_tec_tenet_deescalation_doctrine_effect: "[GetAdministratorNoPriestIcon] [GetAdministratorNoPriestPlural] Political Power: §Y+0.50§!\n\nCan use ['concept_tec_edict_peace_festivals_alias_icon'] Edict\n\nEmbracing any ['ethic:ethic_pacifist'] Faction costs no §Y$tec_loc_unity$§!"
 
  tec_cult_tec_cult_knowledge: "$policy_option_tec_spiritualist_cult_knowledge$"
  tec_cult_tec_cult_knowledge_desc: "$policy_option_tec_spiritualist_cult_knowledge_desc$"
 
  tec_cult_tec_cult_prosperity: "$policy_option_tec_spiritualist_cult_prosperity$"
  tec_cult_tec_cult_prosperity_desc: "$policy_option_tec_spiritualist_cult_prosperity_desc$"
+
+# authority
+
+ tec_cult_tec_tenet_direct_democratic: "$auth_direct_democratic$"
+ tec_cult_tec_tenet_direct_democratic_desc: "$tec_cui_cult_tag_authority_tenet$\n$auth_direct_democratic_desc$"
+ tec_cult_tec_tenet_direct_democratic_effect: "Replaces ['authority:auth_democratic:auth_democratic'] with ['authority:auth_democratic:auth_direct_democratic'] Advanced Authority"
+
+ tec_cult_tec_tenet_ecclesiocracy: "$auth_tec_ecclesiocracy$"
+ tec_cult_tec_tenet_ecclesiocracy_desc: "$tec_cui_cult_tag_authority_tenet$\n$auth_tec_ecclesiocracy_desc$"
+ tec_cult_tec_tenet_ecclesiocracy_effect: "Replaces ['authority:auth_oligarchic:auth_oligarchic'] with ['authority:auth_oligarchic:auth_tec_ecclesiocracy'] Advanced Authority"
+
+ tec_cult_tec_tenet_theocracy: "$auth_tec_theocracy$"
+ tec_cult_tec_tenet_theocracy_desc: "$tec_cui_cult_tag_authority_tenet$\n$auth_tec_theocracy_desc$"
+ tec_cult_tec_tenet_theocracy_effect: "Replaces ['authority:auth_dictatorial:auth_dictatorial'] with ['authority:auth_dictatorial:auth_tec_theocracy'] Advanced Authority"
+
+ tec_cult_tec_tenet_cyber_creed: "$situation_cybernetic_creed_cyberization$"
+ tec_cult_tec_tenet_cyber_creed_desc: "$tec_cui_cult_tag_authority_tenet$\n$situation_cybernetic_creed_cyberization_complete$"
+ tec_cult_tec_tenet_cyber_creed_effect: "Replaces ['authority:[tec_authority_key]:[tec_authority_key]'] with ['authority:[tec_authority_key]:[tec_cyber_creed_authority_key]'] Advanced Authority"
+ tec_cult_tec_tenet_cyber_creed_requirement: "£trigger_no£ Requires finishing the §Y$tec_loc_situation_icon$ $situation_cybernetic_creed_cyberization$§! Situation"
