--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -131,7 +131,8 @@
 	edict_tec_social_benefits_desc:0 "TODO"
 
 	edict_tec_doing_your_part: "Doing Your Part"
-	edict_tec_doing_your_part_desc: "TODO"
+	edict_tec_doing_your_part_desc: "In times of war, every citizen must contribute to our glorious cause. From factory to frontline, we shall unite our efforts and crush our enemies. Victory demands sacrifice - are you doing your part?"
+    edict_tec_doing_your_part_effects: "$tec_loc_naval_cap$ from $mod_base_planet_soldiers$: §G+1§!\n$tec_loc_defense_armies$ from $mod_base_planet_soldiers$: §G+1§!\n\n§RCan only be enacted during War§!"
 
 	edict_tec_technological_funding: "Technological Funding"
 	edict_tec_technological_funding_desc: "TODO"
