Bioelectric trait added

--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -978,6 +978,10 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
 	TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.25§!"
 
+	trait_tec_evolutionary_predators:0 "Predatory Evolution"
+	trait_tec_evolutionary_predators_desc:0 "§LThe strong feast on the weak, the new prey on the old; for this species, the constant cycle of life and death is manifested in a perpetual hunt of those whom they replace.§!"
+	trait_tec_evolutionary_predators_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being §R£job_purge Consumed§!, making the new pop gain a permanent §G$tec_loc_job$ Boost§!.\nNon predatory pops, xeno pops and weak pops will be preyed upon more regularly than other pops; consumed pops are considered as §R£job_purge Purged§!."
+
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
 	trait_tec_spore_growth_effect:0 "Each pop increases $tec_loc_pop_growth$ on the planet by §G0.33%§!\n\n$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §R+0.20§!"
@@ -1048,6 +1052,8 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_inefficient_desc:0 "§LA waste of resources is done by members of this species for achieving their desired labour, acting in a really messy way when it comes to administrating whats needed for it.§!"
 	trait_tec_inefficient_effect:0 ""
 
+	# Produces
+
 	# Upkeeps
 	trait_tec_ravenous:0 "Ravenous"
 	trait_tec_ravenous_desc:0 "§LThis species has a constant need of feeding, reaching even higher levels of hostility for that purpose.§!"
@@ -1068,6 +1074,23 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_catabolic_energization:0 "Catabolic Energization"
 	trait_tec_catabolic_energization_desc:0 "§LA very efficient and streamlined metabolic process makes this species organism extract all possible nutrients of anything they consume.§!"
 	trait_tec_catabolic_energization_effect:0 "$tec_loc_pops$ $tec_loc_basic_resources$ Upkeep: §G-30%§!"
+
+	# Base upkeep
+	trait_tec_add_upkeep_organic:0 "Basal Overdrive"
+	trait_tec_add_upkeep_organic_desc:0 "This species organism require a higher income of sustainance for its basic tasks."
+	trait_tec_add_upkeep_organic_effect:0 "$tec_loc_pops$ $tec_loc_food$ Base Upkeep: §R+0.5§!"
+
+	trait_tec_hyper_upkeep_organic:0 "TODO TRAIT"
+	trait_tec_hyper_upkeep_organic_desc:0 "TODO TRAIT"
+	trait_tec_hyper_upkeep_organic_effect:0 "$tec_loc_pops$ $tec_loc_food$ Base Upkeep: §R+1§!"
+
+	trait_tec_add_upkeep_lithoid:0 "Carbosilicatoid"
+	trait_tec_add_upkeep_lithoid_desc:0 "The composition of this species is based around a mix of carbonic silicates, which means a more brittle and demanding organism due to constant deterioration and oxidation of carbonic subcomponents."
+	trait_tec_add_upkeep_lithoid_effect:0 "$tec_loc_pops$ $tec_loc_minerals$ Base Upkeep: §R+0.5§!"
+
+	trait_tec_hyper_upkeep_lithoid:0 "Mercurial Composition"
+	trait_tec_hyper_upkeep_lithoid_desc:0 "TODO TRAIT."
+	trait_tec_hyper_upkeep_lithoid_effect:0 "$tec_loc_pops$ $tec_loc_minerals$ Base Upkeep: §R+1§!"
 
 	# Upkeeps machine
 	trait_tec_robot_extreme_upkeep:0 "Overcharged Circuitry"
