--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -3831,15 +3831,21 @@ l_english:
 	mod_tec_planet_jobs_produces_mult_per_pop:0 "$mod_planet_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_perfect_planet_jobs_produces_mult_per_pop:0 "$mod_perfect_planet_jobs_produces_mult$ from £pop£ Pops"
 	mod_tec_planet_jobs_robotic_produces_mult_per_pop:0 "$mod_planet_jobs_robotic_produces_mult$ from £job_roboticist£ Robotic Pops"
+ # Resources
+	mod_tec_planet_jobs_energy_produces_mult_per_pop: "$tec_loc_energy$ from $tec_loc_jobs$"
+	mod_tec_planet_jobs_minerals_produces_mult_per_pop: "$tec_loc_minerals$ from $tec_loc_jobs$"
+	mod_tec_planet_jobs_food_produces_mult_per_pop: "$tec_loc_food$ from $tec_loc_jobs$"
+
 	mod_tec_planet_stability_add_per_pop: "$tec_loc_stability$ from £pop£ Pops"
-# Self-assembly
+ # Growth
+	mod_tec_pop_growth_speed_per_pop:0 "$tec_loc_pop_growth$ from £pop£ Pops"
+ # Self-assembly
 	mod_tec_planet_pop_assembly_organic_add_per_pop:0 "Monthly Organic Pop Assembly from £pop£ Pops"
 	mod_tec_planet_pop_assembly_add_per_pop:0 "Monthly Mechanical Pop Assembly from £pop£ Pops"
 
-# Pop Upkeeps
-
+ # Pop Upkeeps
 	mod_tec_pop_upkeep_base_add:0 "Base £pop£ Pop Upkeep"
-
+# /
 
 # Ai auth
 	tec_ai_power_weight: "$tec_loc_sr_tec_ai_power$ Weight"
