--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -377,6 +377,12 @@
 	TRAIT_TEC_LITHOPHYTIC_EFFECT:0 "$mod_planet_pops_upkeep_mult$ if §EPlantoid§! £pop£ Pops on Planet: §G-10%§!"
 # /
 
+# Other
+	trait_tec_bioelectrical:0 "Electrogenic"
+	trait_tec_bioelectrical_desc:0 "§LAn evolutionary advantage made this species able to generate and store a relatively high energy potency; as a byproduct, a costant stream of usable energy could be obtained from such organic functionality.§!"
+	trait_tec_bioelectrical_effect:0 "$mod_pop_category_normal_resources_energy_produces_add$: §G+$@tec_bioelectrical_trait_production$§!\nEach pop increase the $tec_loc_energy$ output on the planet by §G$@tec_bioelectrical_energy_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for £job_livestock£ $job_livestock_plural$ pops§!"
+# /
+
 
 # ASCENSION TRAITS
 # ------------------------------------------------------------
