--- a/localisation/english/replace/!_evolved_to_do_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_l_english.yml
@@ -978,9 +978,12 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	trait_tec_unity_eater_desc:0 "§LThis species has a specific need of psychic nourishment complimentary to its organic needs, manifesting in the consumption of redundant thoughts, feelings or what some may call ''psychic'' aura.§!"
 	TRAIT_TEC_UNITY_EATER_EFFECT:0 "£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §G-50%§!\n£pop£ Pop £unity£ Unity Upkeep: §R+0.25§!"
 
-	trait_tec_evolutionary_predators:0 "Predatory Evolution"
-	trait_tec_evolutionary_predators_desc:0 "§LThe strong feast on the weak, the new prey on the old; for this species, the constant cycle of life and death is manifested in a perpetual hunt of those whom they replace.§!"
-	trait_tec_evolutionary_predators_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being §R£job_purge Consumed§!, making the new pop gain a permanent §G$tec_loc_job$ Boost§!.\nNon predatory pops, xeno pops and weak pops will be preyed upon more regularly than other pops; consumed pops are considered as §R£job_purge Purged§!."
+	trait_tec_predatory_evolution:0 "Predatory Evolution"
+	trait_tec_predatory_evolution_desc:0 "§LThe strong feast on the weak, the new prey on the old; for this species, the constant cycle of life and death is manifested in a perpetual hunt of those whom they replace.§!"
+	trait_tec_predatory_evolution_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, of another pop being §R£job_purge Consumed§!, making the new pop gain a permanent §G$tec_loc_job$ Boost§!.\nLivestock, non predatory pops, xeno pops and weak pops will be preyed upon more regularly than other pops; consumed pops are considered as §R£job_purge Purged§!."
+
+	pop_modifier_trait_tec_predatory_evolution:0 "$trait_tec_predatory_evolution$"
+	pop_modifier_trait_tec_predatory_evolution_desc:0 "The strong feast on the weak, the new prey on the old"
 
 	trait_tec_spore_growth:0 "Sporangic Propagation"
 	trait_tec_spore_growth_desc:0 "§LBy dispersing millions of microscopic corpuscles, of which many are able to thrive due to condition, compatibility or coincidence, this species reproduce incredibly fast.§!"
@@ -1013,6 +1016,10 @@ TRAIT_TEC_TEST_SCRIPVAR_EFFECT:0 "$tec_test_scripvar_bonus$"
 	decision_tec_break_celestial_pods:0 "Break the Pods"
 	decision_tec_break_celestial_pods_desc:0 "These strange anomalies in the planet are a worrying sign, but we can take advantage of them by studying and disposing of them properly."
 	decision_tec_break_celestial_pods:0 "We will break all Celestial $tec_loc_blockers$ on the planet, gaining §YResources§! for each one destroyed."
+
+	trait_tec_decaying_decomposition:0 "Decaying Decomposition"
+	trait_tec_decaying_decomposition_desc:0 "§LThe cycle of death and life is deeply bound to this species, as their body rapidly decays and become a source of new life.§!"
+	trait_tec_decaying_decomposition_effect:0 "Each time a pop of this species is §YGenerated§!, there is between a §G10%§! and §G30%§! chance, proportional to the number of pops on the planet, for another pop to instantly §R£job_purge Wither§!, adding a permanent §Y$tec_loc_deposit$§! to the planet.\nEffects of the decayed deposit vary on the type of species. ($tec_loc_food_icon$ $tec_loc_minerals_icon$)\n\nPops killed due to Purges, Planetary Bombardments or Rituals are considered as §R£job_purge Withered§!."
 
 	d_tec_decomposition_robotic:0 "Obsolescence Junkyard"
 	d_tec_decomposition_robotic_desc:0 "An enormous deposit of previous and discarded robotic models, serving as a repository for materials, pieces and overall replacements for new and better uses."
