--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -381,6 +381,14 @@
 	trait_tec_bioelectrical:0 "Electrogenic"
 	trait_tec_bioelectrical_desc:0 "§LAn evolutionary advantage made this species able to generate and store a relatively high energy potency; as a byproduct, a costant stream of usable energy could be obtained from such organic functionality.§!"
 	trait_tec_bioelectrical_effect:0 "$mod_pop_category_normal_resources_energy_produces_add$: §G+$@tec_bioelectrical_trait_production$§!\nEach pop increase the $tec_loc_energy$ output on the planet by §G$@tec_bioelectrical_energy_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for £job_livestock£ $job_livestock_plural$ pops§!"
+
+	trait_tec_pollinators:0 "Natural Pollinators"
+	trait_tec_pollinators_desc:0 "§LA symbiotic relationship between this species and the native vegetation of their origin made them extremely efficient pollinators, able to automatically process proteinaceous structures from the reproductive cycle of the latter, while helping to boost it as byproduct.§!"
+	trait_tec_pollinators_effect:0 "$mod_planet_farmers_food_produces_add$: §G+$@tec_pollinators_trait_food_job_add$§!\nEach pop increase the $tec_loc_food$ output on the planet by §G$@tec_pollinators_food_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for £job_livestock£ $job_livestock_plural$ pops§!"
+
+	trait_tec_technophile:0 "Technophiles"
+	trait_tec_technophile_desc:0 "§LThe need of technological process has driven these organics to consecrate their lives to the discovery of new ways of advance, with rational thinking and scientific ideas as their main.§!"
+	trait_tec_technophile_effect:0 "$mod_planet_farmers_food_produces_add$: §G+$@tec_pollinators_trait_food_job_add$§!\nEach pop increase the $tec_loc_food$ output on the planet by §G$@tec_pollinators_food_boost_rate_tt$%§!\n\n§HProduction and Effects doubled for £job_livestock£ $job_livestock_plural$ pops§!"
 # /
 
 
