feat: ai auth advanced governments

--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -119,6 +119,14 @@
 	auth_cyber_creed_tec_ai_desc: "A divine governance model where a super intelligent AI, in concert with augmented faithful, oversees the spiritual and technological welfare of the empire."
 	concept_auth_cyber_creed_tec_ai: "$auth_cyber_creed_tec_ai$"
 
+	auth_cyber_tec_ai_individualist: "AI-Augmented Autonomy"
+	auth_cyber_tec_ai_individualist_desc: "The AI enhances rather than replaces individual decision-making, merging sophont and AI reasoning and ruler-ship, a true combination of individuality and collective knowledge."
+	auth_cyber_tec_ai_individualist_tt: "All non-AI Node £leader£ Leaders get the ['trait:leader_trait_tec_aiauth_cyber_assistant_uplink'] Trait\n$unlock_edict_tt$: ['concept_tec_edict_tec_synaptic_surge_protocol']"
+
+	auth_cyber_tec_ai_collectivist: "AI Synaptic Matrix"
+	auth_cyber_tec_ai_collectivist_desc: "Citizens' minds are partially merged into a collective network overseen by the AI, allowing for rapid information sharing and decision-making while maintaining a semblance of individuality."
+	auth_cyber_tec_ai_collectivist_tt: ""
+
 
 	TEC_AUTH_AI_RULER_REPLACE:0 "§HRuler:§!\n-The Ruler is replaced with an ['concept_tec_ai_node_icon'], an immortal §YMechanical Unit§!, which cannot gain experience naturally, needing ['concept_tec_sr_tec_ai_power'] for upkeep and to gain experience"
 	TEC_AUTH_AI_RULER_JOBS_REPLACE:0 "§HJob Replace:§!\n- ['concept_tec_ruler_job_politician_plural_icon'] are replaced by ['concept_tec_ruler_job_tec_ai_computator_plural_icon'] (or ['concept_tec_ruler_job_tec_ai_high_ordinator_plural_icon'] for §YSpiritualists§!)\n- ['concept_tec_building_bureaucratic_1_icon'] are replaced by ['concept_tec_building_tec_aiauth_1_icon']\n$t$- Provides ['concept_tec_specialist_job_tec_ai_operator_plural_icon'] (or ['concept_tec_specialist_job_tec_ai_ordinator_plural_icon'] for §YSpiritualists§!)"
