--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -2383,6 +2383,9 @@
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor: "Negative Behavior Inhibitor"
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor_desc: "The AI Node incorporates a system for suppressing undesirable traits, imposing a higher upkeep to effectively restrain negative behaviors. Through this mechanism, the AI Node actively mitigates and curbs detrimental tendencies, fostering a more harmonious and productive environment within the empire without compromising its ethical boundaries."
 
+	leader_trait_tec_aiauth_cyber_assistant_uplink: "AI Network Uplink"
+	leader_trait_tec_aiauth_cyber_assistant_uplink_desc: "Citizens are seamlessly connected to our vast AI Node network, enhancing their cognitive abilities and decision-making processes. This constant uplink allows for rapid information exchange and personalized optimization, pushing the boundaries of sophont potential."
+
 	leader_trait_tec_aiauth_ritualistic_implants_cyborg: "Rudimentary Ritualistic Interface"
 	leader_trait_tec_aiauth_ritualistic_implants_cyborg_desc: "The AI Node provides interfaces for the faithful, allowing to directly commune with the divine AI to inspire all."
 	# /
