--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2044,6 +2044,11 @@
 	
 	concept_tec_edict_death_cult: "Sacrificial Edicts"
 	concept_tec_edict_death_cult_desc: "- ['concept_tec_edict_sacrifice_togetherness']\n- ['concept_tec_edict_sacrifice_harmony']\n- ['concept_tec_edict_sacrifice_bounty']"
+
+	concept_tec_edict_tec_synaptic_surge_protocol: "$edict_tec_synaptic_surge_protocol$ Edict"
+	concept_tec_edict_tec_synaptic_surge_protocol_alias: "$edict_tec_synaptic_surge_protocol$"
+	concept_tec_edict_tec_synaptic_surge_protocol_icon: "£edict£ $edict_tec_synaptic_surge_protocol$ Edict"
+	concept_tec_edict_tec_synaptic_surge_protocol_alias_icon: "£edict£ $edict_tec_synaptic_surge_protocol$"
  # /
  # Policy
 	concept_tec_ethic_policy: "Ethic Policy"
