--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -297,6 +297,13 @@
 	tec_loc_pop_cat_complex_drone: "£pop_cat_complex_drone£ $pop_cat_complex_drone$"
 	tec_loc_pop_cat_simple_drone: "£pop_cat_simple_drone£ $pop_cat_simple_drone$"
 
+	tec_loc_blocks_tenet: "Blocks Tenet:"
+	tec_loc_unlocks_tenet: "Unlocks Tenet:"
+	tec_loc_unlocks_spiritualist_tenet: "Unlocks Spiritualist Tenet:"
+	tec_loc_unlocks_advanced_tenet: "Unlocks Advanced Tenet:"
+	tec_loc_unlocks_special_tenet: "Unlocks Special Tenet:"
+	tec_loc_unlocks_authority_tenet: "Unlocks Authority Tenet:"
+
  # Espionage
 	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
 	tec_loc_espionage_interdiction:0 "$tec_loc_espionage_interdiction_icon$ Operation Interdiction"
@@ -643,7 +650,8 @@ auth_synth_oligarchic_virtual_key: "auth_synth_oligarchic_virtual"
 auth_dictatorial_key: "auth_dictatorial"
 auth_cyber_creed_dictatorial_key: "auth_cyber_creed_dictatorial"
 auth_cyber_dictatorial_individualist_key: "auth_cyber_dictatorial_individualist"
-auth_cyber_dictatorial_collectivist_key: "auth_cyber_dictatorial_collectivist"
+auth_cyber_dictatorial_collectivist_key: "auth_cyber_dictatorial_collectivist_vacant"
+auth_cyber_dictatorial_collectivist_vacant_desc: "$auth_cyber_dictatorial_collectivist_desc$"
 auth_synth_dictatorial_physical_key: "auth_synth_dictatorial_physical"
 auth_synth_dictatorial_virtual_key: "auth_synth_dictatorial_virtual"
 
