--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -357,4 +357,28 @@ computation_core_research_tt: "\n\n$EFFECTS_HEADER$ $NEW_LINE$- $tec_loc_researc
 describe_machine_worlds:7 "Machine World:\n$t$- Uninhabitable for most organics\n$t$- Unlimited £district£ §YCoordination§!, §YGenerator§!, and §YMining Districts§!\n$t$- Doubles $tec_loc_housing$ and $tec_loc_jobs$ from £district£ §YIndustrial§!, §YCoordination§!, §YGenerator§!, and §YMining§! Districts\n$t$- $mod_planet_jobs_produces_mult$: §G+10%§!\n$t$- £district£ §YNexus§! Districts get an ['concept_tec_specialist_job_tec_spareparts_drone_icon'] Job and doubled $tec_loc_housing$\n$t$- Housing Usage: §G-10%§!\n$t$- §RRemoves all Agriculture Districts§!"
 describe_hive_worlds:1 "Hive World:\n$t$- Uninhabitable for non-hive minded species\n$t$- Unlimited £district£ §YSynaptic§!, §YFarming§!, §YGenerator§!, and §YMining Districts§!\n$t$- Doubles $tec_loc_housing$ and $tec_loc_jobs$ from £district£§YHive§!, §YIndustrial§!, §YSynaptic§!, §YFarming§!, §YGenerator§!, and §YMining§! Districts\n$t$- $mod_planet_jobs_produces_mult$: §G+10%§!"
 
-TECH_UNLOCK_GENE_EXPRESSIONS_TITLE: "§HUnlocks Trait:§! ['trait:trait_auto_mod_biological'']"
+TECH_UNLOCK_GENE_EXPRESSIONS_TITLE: "§HUnlocks Trait:§! ['trait:trait_auto_mod_biological']"
+
+# Tenet
+
+cyber_control_government_effects: "$mod_planet_jobs_unity_produces_mult$: §G+10%§!"
+cyber_control_corporate_effects: "$mod_planet_jobs_consumer_goods_produces_mult$: §G+10%§!"
+cyber_control_independent_effects: "$mod_planet_jobs_upkeep_mult$: §G-5%§!"
+
+cyber_oligarchic_lifespan_tt: "§BCyborg§! £council£ Councilor Lifespan: §G+40 Years§!"
+cyber_oligarchic_ruleroutput_tt: "$mod_planet_jobs_ruler_produces_mult$ per $tec_loc_pop_cat_specialist$ Pop: §G+1%§!"
+
+auth_cyber_dictatorial_collectivist_official_effects: "$TABBED_NEW_LINE$$t$- $mod_planet_jobs_worker_produces_mult$: §G+15%§!"
+auth_cyber_dictatorial_collectivist_commander_effects: "$TABBED_NEW_LINE$$t$- $MOD_SHIP_FIRE_RATE_MULT$: §G+10%§!$TABBED_NEW_LINE$$t$- $mod_job_soldier_stability_add$: §G+2§!"
+auth_cyber_dictatorial_collectivist_scientist_effects: "$TABBED_NEW_LINE$$t$- $MOD_COUNTRY_ALL_TECH_RESEARCH_SPEED$: §G+10%§!"
+
+auth_cyber_dictatorial_individualist_tt: "$unlock_edict_self_indictment_protocol$ $NEW_LINE$$mod_planet_cyborg_jobs_produces_mult$ from £job_enforcer£ $job_enforcer_plural$: §G+2.5%§!"
+
+machine_age.1090.general.tooltip: "$machine_age.geneslockedtooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed']\n$unlock_edict_tt$ §Y[GetCyberCreedEdict]§!"
+machine_age.1100.general.tooltip: "$machine_age.geneswaptooltip$\n$cyber.21.a.end$\n$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_creed']"
+
+tec_cyber.15xx.col.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_colectivist']"
+tec_cyber.15xx.ind.tt: "$tec_loc_unlocks_authority_tenet$ ['tradition:tec_cult_tec_tenet_cyber_individualist']"
+tec_cyber.15xx.no.tt: "No changes to our Authority and no Tenet unlocked"
+
+tec_cyber.15xx.05.name: ""
